k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sales-system 
spec:
  selector:
    app: sales-system
  ports:
    - protocol: TCP
      port: 80
      targetPort: 10087
